test_suite/tests/ui/precondition/deserialize_dst.stderr
error: cannot deserialize a dynamically sized struct
 --> $DIR/deserialize_dst.rs:4:10
  |
4 | #[derive(Deserialize)]
  |          ^^^^^^^^^^^

error: aborting due to previous error

